--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -17,8 +17,10 @@ jobs:
       - name: Install R
         uses: r-lib/actions/setup-r@v2
 
-      - name: Install R packages
-        uses: r-lib/actions/setup-r-dependencies@v2
+      - name: Restore renv
+        run: |
+          Rscript -e "install.packages('renv')"
+          Rscript -e "renv::restore()"
 
       - name: Render site
         run: quarto render
