ci(shiny): Update secret var.

--- a/.github/workflows/shinyapps.yml
+++ b/.github/workflows/shinyapps.yml
@@ -28,6 +28,6 @@ jobs:
                         secret = Sys.getenv('SHINYAPPS_SECRET'))"
           Rscript -e "rsconnect::deployApp(appName = 'variation-between-versions')"
         env:
-          SHINYAPPS_NAME: ${{ secrets.SHINYAPPS_NAME }}
+          SHINYAPPS_NAME: ${{ secrets.SHINYAPPS_USER }}
           SHINYAPPS_TOKEN: ${{ secrets.SHINYAPPS_TOKEN }}
           SHINYAPPS_SECRET: ${{ secrets.SHINYAPPS_SECRET }}
