--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,16 +8,30 @@ website:
   repo-url: "https://github.com/konradswierczek/variation-between-versions"
 
   navbar:
+    background: secondary
+    logo: https://maplelabs.info/wp-content/uploads/2018/05/final_head-darker-leaf-png-300x300.png
+    logo-href: https://maplelab.net
     left:
       - href: index.qmd
         text: Home
+      - href: https://swierckj.shinyapps.io/variation-between-versions/
+        text: Interactive Data
       - icon: github
         href: https://github.com/konradswierczek/variation-between-versions
+      - icon: book
+        href: https://journals.sagepub.com/home/mns
+
 
   page-navigation: true
   back-to-top-navigation: true
 
   page-footer: 
     right: 
+      - icon: browser-chrome
+        href: https://konradswierczek.ca
+      - icon: envelope
+        href: mailto:swierckj@mcmaster.ca
       - icon: github
-        href: https://github.com/konradswierczek/
+        href: https://github.com/konradswierczek/variation-between-versions
+      - icon: book
+        href: https://journals.sagepub.com/home/mns
