--- a/.github/workflows/shinyapps.yml
+++ b/.github/workflows/shinyapps.yml
@@ -15,10 +15,10 @@ jobs:
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
 
-      - name: Install dependencies
-        uses: r-lib/actions/setup-r-dependencies@v2
-        with:
-          extra-packages: rsconnect
+      - name: Restore renv
+        run: |
+          Rscript -e "install.packages('renv')"
+          Rscript -e "renv::restore()"
 
       - name: Deploy app to shinyapps.io
         run: |
